# leafcutter

./: .gitignore  LICENSE  README.md  _config.yml  pyproject.toml  requirements.yml  setup.py
clustering/: README.md  check_files.py  convert_to_RData.R  get_cluster_gene.py  get_intron_splicing_perind.py  get_intron_splicing_pooled.py  get_numers.py  leafcutter_cluster.py  leafcutter_cluster_regtools.py  leafcutter_quant_only.py  merge_junc.py  pipe_splice.sh  refine_intron_splicing.py  sort_junc.py
conda/: build.sh  meta.yaml
conda_recipe/: README.md  bld.bat  build.sh  build_conda.sh  meta.yaml
differential_splicing/: bb_glm.R  bb_glm.stan  bb_glm_fix_conc.stan  betabinomial_glm.stan  betabinomial_glm_mv.stan  betabinomial_glm_null.stan  brain_vs_liver_multinomial.R  differential_splicing.R  dirichlet_multinomial_glm_multi_conc.stan  dm_glm.R  dm_glm.stan  dm_glm_multi_conc.R  leafcutter_ds.R  multinomial_glm.stan  multinomial_glm_deprec.stan  multinomial_glm_multi_conc.R  multinomial_glm_mv.R  multinomial_glm_mv.stan  splicing_qtl.R  stan_beta_binomial.R  stan_beta_binomial_mv.R  utils.R
docs/: 404.html  authors.html  index.html  pkgdown.yml
example_data/: README.md  python_wrappers.sh  run_ds.py  run_sQTL.py  worked_example.sh  worked_out_example.sh
junction_plot/: junction_plot.R
leafcutter/: DESCRIPTION  NAMESPACE  README.md  __main__.py  _pkgdown.yml  cleanup  optim.py  utils.py
leafcutter_R/: DESCRIPTION  NAMESPACE  _pkgdown.yml
leafvis/: download_example.sh  prepare_results.R  run_leafvis.R  server.R  ui.R
leafviz/: classify_clusters.R  download_example.sh  ui.R  (+6 more)
(+178 files in other folders)
