[build-system]
requires = ["setuptools>=61.0"] # to support project.scripts
build-backend = "setuptools.build_meta"

[project]
name = "leafcutter"
description='Leafcutter python implementation'
authors = [{name = "Scott Adamson"}, {name = "Jack Humphrey"}, {name = "Yang I Li"}, {name="David A Knowles"}]
version = "2.0"
#license='MIT'
# dependencies = [ ]

[project.scripts]
leafcutter-ds = 'leafcutter.__main__:leafcutter_ds'
leafcutter-cluster = 'leafcutter.__main__:leafcutter_cluster'
