[build-system]
requires = ["setuptools>=61.0"] # to support project.scripts
build-backend = "setuptools.build_meta"

[project]
name = "leafcutter"
description='Leafcutter python implementation'
authors = [{name = "Scott Adamson"}, {name = "Jack Humphrey"}, {name = "Yang I Li"}, {name="David A Knowles"}]
version = "2.0.2"
readme = "README.md"
dependencies = [
    "torch",
    "pyro-ppl",
    "scipy>=1.11", 
    "pandas", 
    "scikit-learn"
]

[project.scripts]
leafcutter-ds = 'leafcutter.__main__:leafcutter_ds'
leafcutter-cluster = 'leafcutter.__main__:leafcutter_cluster'
